--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ name                     : &name "Fatih Berkay Sarpkaya"
 description              : &description "personal description"
 url                      : https://fatihsarpkaya.github.io 
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "fatihsarpkaya.github.io"
+repository               : "fatihsarpkaya/fatihsarpkaya.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
